k8s/deployment.yaml
#Ver implementacion de volumes y .env existente en repositorio
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-facturacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-facturacion
  template:
    metadata:
      labels:
        app: back-facturacion
    spec:
      containers:
        - name: back-facturacion
        # Pendiente: utilizar forma de no hardcodear la imagen y actualizar versiones
          image: southamerica-east1-docker.pkg.dev/construtem/microservicios-construtem/back-facturacion:latest
          ports:
            - containerPort: 8080
            # Revisar bien los recursos a utilizar para no usar demas y que no se acaben los creditos gcp xd
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
