k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-facturacion-service
spec:
  selector:
    app: backend-facturacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
